// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
import "eraftpb.proto";
package kv;

// The greeting service definition.
service KVService {
  // Sends a greeting
  rpc Operate (Request) returns (Reply) {}
  rpc ConfChange (ConfChgReq) returns (Reply) {}
}

service RaftService {
  rpc sendMsg(MessageWrap) returns (Reply) {}
}

// The request message containing the user's name.
message Request {
  uint32 request_type = 1;
  uint64 client_id = 2;
  uint64 request_seq = 3;
  string key = 4;
  string value = 5;
  string op = 6;
}

message ConfChgReq {
  uint64 id = 1;
  uint32 change_type = 2;
  uint64 node_id = 3;
  string node_addr = 4;
  string node_kv_addr = 5;
}

// The response message containing the greetings
message Reply {
    bool ok = 1;
    string value = 2;
    map<uint64,string> addrs = 3;
}


message MessageWrap {
    bool from_leader = 1;
    uint64 leader_id = 2;
    string leader_kv_addr = 3;
    map<uint64, string> addrs = 4;
    map<uint64, string> kv_addrs = 5;
    eraftpb.Message msg = 6;
}